--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-Flask==1.1.1
-Jinja2==2.11.1
-Flask-SQLAlchemy==2.4.1
-SQLAlchemy==1.3.13
-Flask-WTF==0.14.3
+asn1crypto==0.24.0
+cryptography==2.1.4
+enum34==1.1.6
+idna==2.6
+ipaddress==1.0.17
+keyring==10.6.0
+keyrings.alt==3.0
+pycrypto==2.6.1
+pygobject==3.26.1
+pyxdg==0.25
+SecretStorage==2.3.1
+six==1.11.0
 WTForms==2.2.1
